--- a/src/pages/dashboard/Dashboard.css
+++ b/src/pages/dashboard/Dashboard.css
@@ -9,8 +9,12 @@
 }
 
 .dashboardDropdownMenu {
-    width: 300px;
+    width: 280px;
     display: none;
+}
+.dashboardDropdownMenu button {
+    border: 1px solid var(--border-color);
+    border-radius: 0.5rem;
 }
 
 
@@ -18,7 +22,7 @@
 .dashboardSectionContainer {
     max-width: 60%;
     overflow-x: auto;
-    margin: 0 0;
+    margin: 0 auto;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
@@ -28,13 +32,14 @@
     font-size: 1rem;
 }
 
-@media screen and (max-width: 750px) {
+@media screen and (max-width: 900px) {
     .Dashboard {
         flex-direction: column;
     }
 
     .dashboardDropdownMenu {
         display: block;
+
     }
 
     .dashboardDashboardNavBar {
@@ -42,7 +47,7 @@
     }
 
     .dashboardSectionContainer {
-        max-width: 80%;
+        max-width: 90%;
     }
 
 }
